# string-matching-benchmarks

./: Cargo.toml  README.md
src/: lib.rs
